bakkie_derive/tests/ui/fail/tool_boolean_value.stderr
error: expected string literal
 --> tests/ui/fail/tool_boolean_value.rs:3:15
  |
3 | #[tool(name = true)]
  |               ^^^^
